==========
03/08/2009
==========

- Correcoes na exibicao de Quota para Blogs e Feeds
- Inclusao de Aba para visualizacao de Quota no profile/edit
- Atualizacao da documentacao dos webservices do frontend, inclusao de flags
responsaveis pelo multi-task

HORAS TRABALHADAS: 3h