@@ -8,3 +8,11 @@
 responsaveis pelo multi-task
 
 HORAS TRABALHADAS: 3h
+
+==========
+11/08/2009
+==========
+
+- Recorte layout frontend
+
+HORAS TRABALHADAS: 4h
